Updated new files.

--- a/StateManagements/Riverpod/movie_app/pubspec.yaml
+++ b/StateManagements/Riverpod/movie_app/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # Flutter External Libraries
+  ## State Managements
   flutter_riverpod: 
+  ## HTTP
+  dio: 
 
 dev_dependencies:
   flutter_test:
